# hackathon-todo-2.0

hackathon-todo-2.0-phase2/backend/: main.py  pyproject.toml  schemas.py
hackathon-todo-2.0-phase2/backend/api/: main.py
hackathon-todo-2.0-phase2/backend/api/routes/: tasks.py
hackathon-todo-2.0-phase2/backend/core/: config.py  db.py  security.py
hackathon-todo-2.0-phase2/backend/middleware/: logging.py
hackathon-todo-2.0-phase2/backend/models/: __init__.py  session.py  task.py  user.py  verification.py
hackathon-todo-2.0-phase3/: .env  .gitignore  cleanup_db.py  copy_project.py  full_project_code.txt  main.py  pyproject.toml  run_backend.bat  setup.py  test_agent_chat.py
hackathon-todo-2.0-phase3/ai-agent/: README.md  agent.py  main.py  pyproject.toml
hackathon-todo-2.0-phase3/ai-agent/ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hackathon-todo-2.0-phase3/backend/: main.py  run_server.py  schemas.py  seed_user.py
hackathon-todo-2.0-phase3/backend/api/: main.py
hackathon-todo-2.0-phase3/backend/core/: security.py
hackathon-todo-2.0-phase3/backend/middleware/: logging.py
hackathon-todo-2.0-phase3/backend/models/: account.py  task.py
hackathon-todo-2.0-phase3/frontend/: package-lock.json  package.json
hackathon-todo-2.0-phase3/hackathon_todo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hackathon-todo-2.0-phase3/mcp-server/: README.md  main.py  pyproject.toml
hackathon-todo-2.0-phase3/mcp-server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hackathon-todo-2.0-phase3/src/: services.py
(+67 files in other folders)
